--- a/main.css
+++ b/main.css
@@ -1,3 +1,22 @@
 .hide {
   display:none;
 }
+
+.module {
+  background-size: cover;
+  /* width: 300px; */
+  /* height: 300px; */
+  margin: 10px 0 0 10px;
+  position: relative;
+  float: left;
+  border: 1px red solid;
+}
+
+.lr p {
+  font-family: 'Roboto', sans-serif;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  color: white;
+  margin: 0;
+}
