--- a/main.css
+++ b/main.css
@@ -3,23 +3,26 @@
 }
 
 .module {
+
   background-size: cover;
-  /* width: 300px; */
-  /* height: 300px; */
   margin: 10px 0 0 10px;
   position: relative;
   float: left;
   border: 1px red solid;
 }
 
-.lr p {
-  font-family: 'Roboto', sans-serif;
+.bottom p {
   position: absolute;
   bottom: 20px;
   left: 20px;
   color: white;
   margin: 0;
 }
+
+.top p {
+  top: 20px;
+}
+
 button {
   margin: 15px 0px;
 }
@@ -27,3 +30,29 @@ button {
 #display-text-input {
   border: 1px solid black;
 }
+/* 
+.b-module {
+  background-attachment: fixed;
+  overflow: hidden; 
+}
+.b-module > header {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 10px;
+  background: inherit;
+  background-attachment: fixed;
+}
+.b-module > header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  background-attachment: fixed;
+  -webkit-filter: blur(12px);
+  filter: blur(12px);
+} */
