--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 html {
-  font-family: Arial, Helvetica, sans-serif
-  font-size: 3em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
 }
 
 .manly-font {
