--- a/main.css
+++ b/main.css
@@ -26,9 +26,6 @@ html {
 }
 
 .bottom p {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
   color: white;
   margin: 0;
 }
@@ -50,7 +47,22 @@ button {
   position: relative;
 }
 p.tag-line {
-  position: absolute;
   right: 0px;
   bottom: 0px;
+  display: none;
+  width: 100%;
+  text-align: end;
+}
+#quote-container {
+  position: absolute; 
+  height: 100%;
+  width: 100%;
+  top: 0;
+  display: flex;
+  align-items: flex-end;
+  flex-flow: column;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
