--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 2em;
+  font-size: 1em;
+}
+
+p {
+  padding:10px;
 }
 
 .manly-font {
