--- a/main.css
+++ b/main.css
@@ -1,11 +1,21 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
+  width:100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 p {
   padding:10px;
+  
 }
+
+/* canvas {
+  margin: 10px;
+  padding: 10px;
+} */
 
 .manly-font {
   font-family: 'Staatliches', cursive;
@@ -19,9 +29,9 @@ p {
   border: 1px solid red;
 }
 
-/* .hide {
+.hide {
   display:none;
-} */
+}
 
 .responsive {
   width: 100%;
@@ -83,4 +93,76 @@ p.tag-line {
 
 .justify-end {
   justify-content: flex-end;
+}
+
+.multi-level, .item ul, .nav input[type="checkbox"] {
+  display: none;
+}
+
+#menu:checked ~ .multi-level, .item input:checked ~ ul {
+  display: block;
+}
+
+.arrow {
+  width: 12px;
+  height: 12px;
+  vertical-align: middle;
+  float: left;
+  z-index: 0;
+  margin: 17px 1em 0 2em;
+}
+.item input + .arrow {
+  transform: rotate(-90deg);
+  transition: 0.1s;
+}
+.item input:checked + .arrow {
+  transform: rotate(0deg);
+  transition: 0.1s;
+}
+
+label:hover {
+  cursor: pointer;
+}
+label {
+  width: 100%;
+  display: block;
+  z-index: 3;
+  position: relative;
+}
+.nav {
+  width: 100%;
+  background-color: white;
+  overflow-x: hidden;
+  border-bottom: 1px solid #CFD8DC;
+}
+
+#nav-icon {
+  font-size: 28px;
+  line-height: 50px;
+  padding-left: 1em;
+  color: white;
+  background-color: #F44336;
+}
+
+.nav ul, .nav li, label {
+  line-height: 50px;
+  margin: 0;
+  padding: 0 2em;
+  list-style: none;
+  text-decoration: none;
+  color: #90A4AE;
+  font-weight: 100;
+  width: 100%;
+}
+.item ul {
+  padding: 0 0.25em;
+}
+.nav li a {
+  line-height: 50px;
+  margin: 0;
+  padding: 0 4em;
+  list-style: none;
+  text-decoration: none;
+  color: #90A4AE;
+  font-weight: 100;
 }
