--- a/main.css
+++ b/main.css
@@ -12,10 +12,6 @@ p {
   
 }
 
-/* canvas {
-  margin: 10px;
-  padding: 10px;
-} */
 
 .manly-font {
   font-family: 'Staatliches', cursive;
@@ -99,9 +95,9 @@ p.tag-line {
   display: none;
 }
 
-#menu:checked ~ .multi-level, .item input:checked ~ ul {
+/* #menu:checked ~ .multi-level, .item input:checked ~ ul {
   display: block;
-}
+} */
 
 .arrow {
   width: 12px;
@@ -131,7 +127,7 @@ label {
 }
 .nav {
   width: 100%;
-  background-color: white;
+  background-color: blueviolet;
   overflow-x: hidden;
   border-bottom: 1px solid #CFD8DC;
 }
@@ -140,29 +136,32 @@ label {
   font-size: 28px;
   line-height: 50px;
   padding-left: 1em;
-  color: white;
+  /* color: white; */
   background-color: #F44336;
 }
 
 .nav ul, .nav li, label {
-  line-height: 50px;
+  line-height: 40px;
   margin: 0;
-  padding: 0 2em;
+  /* padding: 0 2em; */
   list-style: none;
   text-decoration: none;
-  color: #90A4AE;
+  /* color: #90A4AE; */
   font-weight: 100;
   width: 100%;
+  border: 1px solid black;
 }
 .item ul {
-  padding: 0 0.25em;
+  /* padding: 0 0.25em; */
+  /* text-align: end; */
 }
 .nav li a {
-  line-height: 50px;
+  line-height: 30px;
   margin: 0;
   padding: 0 4em;
   list-style: none;
   text-decoration: none;
-  color: #90A4AE;
+  /* color: #90A4AE; */
   font-weight: 100;
+  border: 1px solid black;
 }
