--- a/main.css
+++ b/main.css
@@ -99,6 +99,8 @@ p.tag-line {
   justify-content: flex-end;
 }
 
+
+/* Menu ------------------------------------------- */
 .multi-level, .item ul, .menu-bar input[type="checkbox"] {
   display: none;
 }
@@ -171,29 +173,92 @@ label {
   padding: 0 4em;
   list-style: none;
   text-decoration: none;
-  /* color: #90A4AE; */
   font-weight: 100;
   border: 1px solid black;
 }
 
-
+/* .arrow {
+  display:none;
+} */
 
 @media (min-width:720px) {
   
   
-  .menu-bar {
-    display: flex;
-    justify-content: space-around;
+  .multi-level, .item ul, .menu-bar input[type="checkbox"] {
+    display: none;
   }
-
-
-
-
-
-
-  /* #photo-options-bar, #quote-options-bar, #text-position-bar, #text-options-bar, #other-bar, #font-options-bar {
-    display:flex;
-    width:15%;
-    flex-direction: column;
-  } */
+  
+  #menu:checked ~ .multi-level, .item input:checked ~ ul {
+    display: block;
+  }
+  
+   .arrow {
+    width: 12px;
+    height: 12px;
+    vertical-align: middle;
+    float: left;
+    z-index: 0;
+    margin: 17px 1em 0 2em;
+  }
+  
+  
+  .item input + .arrow {
+    transform: rotate(-90deg);
+    transition: 0.1s;
+  }
+  .item input:checked + .arrow {
+    transform: rotate(0deg);
+    transition: 0.1s;
+  }
+  
+  label:hover {
+    cursor: pointer;
+  }
+  label {
+    width: 100%;
+    display: block;
+    z-index: 3;
+    position: relative;
+  }
+  
+  .menu-bar {
+   
+    background-color: blueviolet;
+    overflow-x: hidden;
+    
+  }
+  
+  #nav-icon {
+    font-size: 28px;
+    line-height: 50px;
+    padding-left: 1em;
+  
+    background-color: #F44336;
+  } 
+  
+  
+  .menu-bar ul, .menu-bar li, label {
+    line-height: 40px;
+    margin: 0;
+    
+    list-style: none;
+    text-decoration: none;
+    
+    font-weight: 100;
+    width: 100%;
+    border: 1px solid black;
+  }
+  
+  
+  .menu-bar li a {
+    line-height: 30px;
+    margin: 0;
+    padding: 0 4em;
+    list-style: none;
+    text-decoration: none;
+    /* color: #90A4AE; */
+    font-weight: 100;
+    border: 1px solid black;
+  }
+  
 } 
