--- a/main.css
+++ b/main.css
@@ -9,9 +9,7 @@ html {
 
 p {
   padding:10px;
-  
-}
-
+ }
 
 .manly-font {
   font-family: 'Staatliches', cursive;
@@ -27,10 +25,6 @@ p {
 
 .white-font {
   color:white;
-}
-
-#display-text-p {
-  border: 1px solid red;
 }
 
 .hide {
@@ -50,11 +44,6 @@ p {
   float: left;
   border: 1px red solid;
 }
-
-/* .bottom p {
-  color: white;
-  margin: 0;
-} */
 
 .top p {
   top: 20px;
@@ -78,6 +67,7 @@ button {
   position: relative;
   font-size: 3rem;
 }
+
 p.tag-line {
   right: 0px;
   bottom: 0px;
@@ -109,23 +99,10 @@ p.tag-line {
   display: block;
 }
 
- .arrow {
-  width: 12px;
-  height: 12px;
-  vertical-align: middle;
-  float: left;
-  z-index: 0;
-  margin: 17px 1em 0 2em;
-}
-
-
-.item input + .arrow {
-  transform: rotate(-90deg);
-  transition: 0.1s;
-}
-.item input:checked + .arrow {
-  transform: rotate(0deg);
-  transition: 0.1s;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 label:hover {
@@ -139,17 +116,18 @@ label {
 }
 
 .menu-bar {
- 
   background-color: blueviolet;
   overflow-x: hidden;
-  
+  position: absolute;
+  width: 100vw;
+  left: 0;
+  right: 0;
 }
 
 #nav-icon {
   font-size: 28px;
   line-height: 50px;
   padding-left: 1em;
-
   background-color: #F44336;
 } 
 
@@ -157,10 +135,8 @@ label {
 .menu-bar ul, .menu-bar li, label {
   line-height: 40px;
   margin: 0;
-  
   list-style: none;
   text-decoration: none;
-  
   font-weight: 100;
   width: 100%;
   border: 1px solid black;
@@ -177,17 +153,76 @@ label {
   border: 1px solid black;
 }
 
-
+@media (max-width:720px) {
+  #large-bar {
+    display: none
+  }
+  #small-bar {
+    display: flex 
+    flex-flow: column;
+  }
+}
 @media (min-width:720px) {
+  #small-bar {
+    display: none !important;
+  }
+  #large-bar {
+    display: flex;
+  }
 
+  #nav-icon {
+    background-color: blue;
+  }
 
-
-
-
-
-
-
-
-
-
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+  }
+  
+  li.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
 }
