--- a/main.css
+++ b/main.css
@@ -60,7 +60,7 @@ button {
 
 #display-module {
   width:100%;
-  max-width: 1000px;
+  max-width: 800px;
 }
 
 .final-quote {
@@ -165,7 +165,7 @@ label {
 }
 @media (min-width:724px) {
   #small-bar {
-    display: none;
+    display: none !important;
   }
   #large-bar {
     display: flex;
@@ -175,10 +175,7 @@ label {
     justify-content: space-between;
   }
 
-  #nav-icon {
-    background-color: blue;
-  }
-
+  
   ul {
     list-style-type: none;
     margin: 0;
