--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ p {
   margin: 10px 0 20 10px;
   position: relative;
   float: left;
-  border: 1px red solid;
+  
 }
 
 .top p {
@@ -54,17 +54,12 @@ button {
   display:inline-block;
 }
 
-#display-text-input {
-  border: 1px solid black;
-}
-
 #display-module {
   width:100%;
   max-width: 800px;
 }
 
 .final-quote {
-  border: solid green 1px;
   position: relative;
   font-size: 3rem;
 }
@@ -92,7 +87,7 @@ p.tag-line {
 
 
 /* Menu ------------------------------------------- */
-.multi-level, .item ul, .menu-bar input[type="checkbox"] {
+ .item ul, .menu-bar input[type="checkbox"] {
   display: none;
 }
 
@@ -104,6 +99,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  background-color: #333;
 }
 
 label:hover {
@@ -117,7 +113,7 @@ label {
 }
 
 .menu-bar {
-  background-color: blueviolet;
+  color: rgb(139, 27, 27);
   overflow-x: hidden;
   position: absolute;
   width: 100vw;
@@ -129,7 +125,7 @@ label {
   font-size: 28px;
   line-height: 50px;
   padding-left: 1em;
-  background-color: #F44336;
+  background-color: black;
 } 
 
 
@@ -140,8 +136,7 @@ label {
   text-decoration: none;
   font-weight: 100;
   width: 100%;
-  border: 1px solid black;
-}
+  }
 
 
 .menu-bar li a {
@@ -151,7 +146,57 @@ label {
   list-style: none;
   text-decoration: none;
   font-weight: 100;
-  border: 1px solid black;
+  }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 @media (max-width:724px) {
@@ -176,56 +221,6 @@ label {
   }
 
   
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-  }
-  
-  li.dropdown {
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {background-color: #f1f1f1;}
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
   
 }
 
