--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Special Elite', Helvetica, sans-serif;
   font-size: 1em;
   width:100%;
   margin: 0;
