--- a/main.css
+++ b/main.css
@@ -21,10 +21,26 @@ canvas {
 p {
   padding:10px;
   color: white;
+  font-size: 2rem;
  }
 
- h1, h2 {
+ h1, h2, h3 {
    color:white;
+   padding: 1rem;
+   margin:0;
+ }
+
+ h1 {
+   font-size:3rem;
+ }
+
+ h2 {
+   font-size:3rem;
+ }
+
+ h3 {
+   padding-bottom: 3rem;
+   font-size:2rem;
  }
 
 .manly-font {
@@ -106,9 +122,7 @@ p.tag-line {
 .carousel-container {
   display:block;
   width:600px;
-  
   margin:auto;
-  border: 3px solid red;
   overflow: hidden;
   position: relative;
   background-size: contain;
@@ -145,6 +159,25 @@ p.tag-line {
   width: 100%;
 }
 
+#ron-image {
+  display:block;
+  width:60%;
+  max-width: 1600px;
+  background-size: contain;
+  margin: 20px auto;
+}
+
+#ron-image img {
+  max-width: 100%;
+  margin: 0px auto;
+}
+
+#home-get-quote {
+  width:30%;
+  font-size:2rem;
+  margin: 0 auto;
+  padding:5px;
+}
 
 /* Menu ------------------------------------------- */
  .item ul, .menu-bar input[type="checkbox"] {
@@ -162,7 +195,7 @@ ul {
   background-color: #333;
 }
 
-label:hover {
+label:hover, button, #prev-button, #next-button {
   cursor: pointer;
 }
 label {
@@ -230,7 +263,7 @@ li a, .dropbtn {
   text-decoration: none;
 }
 
-li a:hover, .dropdown:hover .dropbtn, .item:hover {
+li a:hover, .dropdown:hover .dropbtn, .item:hover, button:hover {
   background-color: red;
   text-transform: uppercase;
 }
