--- a/main.css
+++ b/main.css
@@ -173,7 +173,8 @@ p.tag-line {
 }
 
 #home-get-quote {
-  width:30%;
+  min-width:30%;
+  max-width:100%;
   font-size:2rem;
   margin: 0 auto;
   padding:5px;
