--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ html {
   }
 
 body {
-  background-image: url('images/42925.jpg');
+  background-image: url('images/wood.jpg');
   background-size:cover;
 }
 
